chore: final form entities

--- a/wbook-api/Infrastructure/Infrastructure.csproj
+++ b/wbook-api/Infrastructure/Infrastructure.csproj
@@ -7,9 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Enum\**" />
+    <EmbeddedResource Remove="Enum\**" />
+    <None Remove="Enum\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Entities\" />
     <Folder Include="Context\" />
-    <Folder Include="Enum\" />
   </ItemGroup>
 
   <ItemGroup>
