--- a/wbook-api/wbook-api.webapp/appsettings.json
+++ b/wbook-api/wbook-api.webapp/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "connectionStrings": {
     "defaultConnection": "Server=tcp:proiectfinalsergiu.database.windows.net,1433;Initial Catalog=wbook-db;Persist Security Info=False;User ID=adminSergiu;Password=Copernic@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "JWT": {
+    "ValidAudience": "https://localhost:7114",
+    "ValidIssuer": "https://localhost:3000",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   }
 }
